# kobo-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: _config.yml  index.md
src/kobo_mcp/: server.py
