[project]
name = "kobo-mcp"
version = "0.1.4"
description = "MCP server for KoboToolbox - deploy surveys and fetch submissions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Benjamin Daniels", email = "bbdaniels@gmail.com" }
]
keywords = ["mcp", "kobotoolbox", "kobo", "survey", "xlsform", "claude", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/bbdaniels/kobo-mcp"
Documentation = "https://bbdaniels.github.io/kobo-mcp/"
Repository = "https://github.com/bbdaniels/kobo-mcp"
Issues = "https://github.com/bbdaniels/kobo-mcp/issues"

[project.scripts]
kobo-mcp = "kobo_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kobo_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/kobo_mcp"]
